--- a/module-2/Matplotlib-Seaborn/your-code/main.ipynb
+++ b/module-2/Matplotlib-Seaborn/your-code/main.ipynb
@@ -17,19 +17,11 @@
    "source": [
     "# Libraries\n",
     "\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import pandas as pd"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -50,13 +42,6 @@
     "y = x*2\n",
     "z = x**2"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -96,13 +81,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -148,13 +126,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -166,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +146,7 @@
        "Text(0.5, 1.0, 'XY GRAPH')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -207,13 +178,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -223,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,16 +246,8 @@
     "ax2.set_xlabel('x label')\n",
     "ax2.set_ylabel('z label')\n",
     "\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -302,16 +258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a1d91ec90>"
+       "<matplotlib.legend.Legend at 0x1a195b4dd0>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -360,13 +316,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -378,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +713,7 @@
        "[367 rows x 24 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -1110,7 +1059,7 @@
        "[1309 rows x 12 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1102,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,13 +1114,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1181,176 +1123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>Braund, Mr. Owen Harris</td>\n",
-       "      <td>male</td>\n",
-       "      <td>A/5 21171</td>\n",
-       "      <td>U0</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>C85</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Heikkinen, Miss. Laina</td>\n",
-       "      <td>female</td>\n",
-       "      <td>STON/O2. 3101282</td>\n",
-       "      <td>U0</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>C123</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Allen, Mr. William Henry</td>\n",
-       "      <td>male</td>\n",
-       "      <td>373450</td>\n",
-       "      <td>U0</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1304</td>\n",
-       "      <td>Spector, Mr. Woolf</td>\n",
-       "      <td>male</td>\n",
-       "      <td>A.5. 3236</td>\n",
-       "      <td>U0</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1305</td>\n",
-       "      <td>Oliva y Ocana, Dona. Fermina</td>\n",
-       "      <td>female</td>\n",
-       "      <td>PC 17758</td>\n",
-       "      <td>C105</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1306</td>\n",
-       "      <td>Saether, Mr. Simon Sivertsen</td>\n",
-       "      <td>male</td>\n",
-       "      <td>SOTON/O.Q. 3101262</td>\n",
-       "      <td>U0</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1307</td>\n",
-       "      <td>Ware, Mr. Frederick</td>\n",
-       "      <td>male</td>\n",
-       "      <td>359309</td>\n",
-       "      <td>U0</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1308</td>\n",
-       "      <td>Peter, Master. Michael J</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2668</td>\n",
-       "      <td>U0</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1309 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   Name  Gender  \\\n",
-       "0                               Braund, Mr. Owen Harris    male   \n",
-       "1     Cumings, Mrs. John Bradley (Florence Briggs Th...  female   \n",
-       "2                                Heikkinen, Miss. Laina  female   \n",
-       "3          Futrelle, Mrs. Jacques Heath (Lily May Peel)  female   \n",
-       "4                              Allen, Mr. William Henry    male   \n",
-       "...                                                 ...     ...   \n",
-       "1304                                 Spector, Mr. Woolf    male   \n",
-       "1305                       Oliva y Ocana, Dona. Fermina  female   \n",
-       "1306                       Saether, Mr. Simon Sivertsen    male   \n",
-       "1307                                Ware, Mr. Frederick    male   \n",
-       "1308                           Peter, Master. Michael J    male   \n",
-       "\n",
-       "                  Ticket Cabin Embarked  \n",
-       "0              A/5 21171    U0        S  \n",
-       "1               PC 17599   C85        C  \n",
-       "2       STON/O2. 3101282    U0        S  \n",
-       "3                 113803  C123        S  \n",
-       "4                 373450    U0        S  \n",
-       "...                  ...   ...      ...  \n",
-       "1304           A.5. 3236    U0        S  \n",
-       "1305            PC 17758  C105        C  \n",
-       "1306  SOTON/O.Q. 3101262    U0        S  \n",
-       "1307              359309    U0        S  \n",
-       "1308                2668    U0        C  \n",
-       "\n",
-       "[1309 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NUMERICAL VARIABLES\n",
-    "# your code here\n",
-    "\n",
-    "titanic.select_dtypes(object)"
+    "# your code here\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1468,18 +1251,18 @@
        "[1309 rows x 3 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "titanic.select_dtypes(include=['float64'])\n"
+    "titanic.select_dtypes(include=['float64'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1609,14 +1392,21 @@
        "[1309 rows x 4 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "titanic.select_dtypes(include=['int64'])\n",
-    "\n",
+    "titanic.select_dtypes(include=['int64'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Numerical categories/columns are: Survived, Age, Fare, PassengerId, Pclass, SibSp, Parch"
    ]
   },
@@ -1786,6 +1576,7 @@
     "# CATEGORICAL VARIABLES\n",
     "# your code here\n",
     "\n",
+    "#titanic.select_dtypes(object)\n",
     "titanic.select_dtypes(include=['object'])"
    ]
   },
@@ -1808,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1821,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1832,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1858,16 +1649,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1a1deca650>"
+       "<matplotlib.collections.PathCollection at 0x1a1a07c910>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1889,20 +1680,6 @@
     "\n",
     "plt.scatter(titanic.Age, titanic.index)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
