--- a/module-3/Supervised-Learning/your-code/final project code.ipynb
+++ b/module-3/Supervised-Learning/your-code/final project code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,26 +559,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "EOF while scanning triple-quoted string literal (<ipython-input-11-a5375aae5321>, line 15)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-a5375aae5321>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    Central_Duration      object    1/3 of null values.\u001b[0m\n\u001b[0m                                                        \n^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOF while scanning triple-quoted string literal\n"
-     ]
-    },
-    {
-     "ename": "SyntaxError",
-     "evalue": "EOF while scanning triple-quoted string literal (<ipython-input-11-a5375aae5321>, line 15)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-a5375aae5321>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    Central_Duration      object    1/3 of null values.\u001b[0m\n\u001b[0m                                                        \n^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOF while scanning triple-quoted string literal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "- Need to change:\n",
@@ -635,13 +618,6 @@
    "source": [
     "solar['Eclipse_Type'].value_counts()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -4704,37 +4680,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# there are 2 categorical & numericals"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -5428,6 +5376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "# fitting the model on the training data\n",
     "\n",
     "\n",
@@ -5435,7 +5384,8 @@
     "model = lm.fit(X_train, y_train)\n",
     "predictions = lm.predict(X_test)\n",
     "\n",
-    "                    # ...nvm i have to use logistic regression for this CLASSIFICATION PROBLEM *eye roll, sweats*"
+    "                    # ...nvm i have to use logistic regression for this CLASSIFICATION PROBLEM *eye roll, sweats*\n",
+    "'''"
    ]
   },
   {
