cleaning up code

--- a/module-3/Supervised-Learning/your-code/final project code.ipynb
+++ b/module-3/Supervised-Learning/your-code/final project code.ipynb
@@ -177,34 +177,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# new approach"
+    "# new approach ->"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -471,18 +448,10 @@
     }
    ],
    "source": [
+    "# replacing space between words with underscore\n",
+    "\n",
     "solar.columns = solar.columns.str.replace(' ','_')\n",
     "solar.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#solar.columns = solar.columns.str.replace(' ','_')\n",
-    "#solar.columns"
    ]
   },
   {
@@ -545,6 +514,7 @@
     }
    ],
    "source": [
+    "#  verifying types of data\n",
     "solar.dtypes"
    ]
   },
@@ -597,13 +567,13 @@
        "Tm      72\n",
        "Am      72\n",
        "An      36\n",
-       "A-      34\n",
        "A+      34\n",
+       "A-      34\n",
        "H3      26\n",
        "As      25\n",
        "H2      24\n",
-       "T-      17\n",
        "Hm      17\n",
+       "T-      17\n",
        "Tn      14\n",
        "Ts      12\n",
        "T+       9\n",
@@ -616,6 +586,7 @@
     }
    ],
    "source": [
+    "# how many of each type in the data\n",
     "solar['Eclipse_Type'].value_counts()"
    ]
   },
@@ -670,6 +641,7 @@
     }
    ],
    "source": [
+    "# map function; recount the types in new category types\n",
     "solar['Eclipse_Type'] = list(map(eclipseClean,solar['Eclipse_Type']))\n",
     "solar['Eclipse_Type'].value_counts()"
    ]
@@ -707,16 +679,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# we're removing the hybrid category type 'H'\n",
+    "# because the data will be compromised/disparity. might give unnecessary outliers\n",
+    "\n",
     "solar = solar.drop(solar[solar.Eclipse_Type == 'H'].index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -728,12 +703,13 @@
        "Name: Eclipse_Type, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# recount the new 3 categories\n",
     "solar['Eclipse_Type'].value_counts()"
    ]
   },
@@ -748,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +738,7 @@
        "Name: Latitude, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +927,7 @@
        "4              NaN            60.6               S  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
