--- a/module-3/Supervised-Learning/your-code/final project code.ipynb
+++ b/module-3/Supervised-Learning/your-code/final project code.ipynb
@@ -6271,6 +6271,7 @@
     }
    ],
    "source": [
+    "# number of columns of data\n",
     "len(lunar.columns)"
    ]
   },
@@ -6307,6 +6308,7 @@
     }
    ],
    "source": [
+    "# different types of each column\n",
     "lunar.dtypes"
    ]
   },
@@ -6344,6 +6346,7 @@
     }
    ],
    "source": [
+    "# amount of different individual types of each lunar type\n",
     "lunar['Eclipse_Type'].value_counts()"
    ]
   },
@@ -6364,6 +6367,7 @@
     }
    ],
    "source": [
+    "# lenght of \n",
     "len(lunar['Eclipse_Type'].value_counts())"
    ]
   },
@@ -6390,6 +6394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# map function to clean up the amount of different types\n",
     "lunar['Eclipse_Type'] = list(map(eclipsetypeClean,lunar['Eclipse_Type']))"
    ]
   },
@@ -6413,6 +6418,7 @@
     }
    ],
    "source": [
+    "# recounting to make sure the different type of lunar types are accounted for\n",
     "lunar['Eclipse_Type'].value_counts()"
    ]
   },
@@ -6433,6 +6439,7 @@
     }
    ],
    "source": [
+    "# amount of different types of lunar eclipses\n",
     "len(lunar['Eclipse_Type'].value_counts())"
    ]
   },
