--- a/module-3/Supervised-Learning/your-code/final project code.ipynb
+++ b/module-3/Supervised-Learning/your-code/final project code.ipynb
@@ -576,13 +576,13 @@
        "Tm      72\n",
        "Am      72\n",
        "An      36\n",
-       "A+      34\n",
        "A-      34\n",
+       "A+      34\n",
        "H3      26\n",
        "As      25\n",
        "H2      24\n",
-       "Hm      17\n",
        "T-      17\n",
+       "Hm      17\n",
        "Tn      14\n",
        "Ts      12\n",
        "T+       9\n",
@@ -3765,7 +3765,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a21b95150>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a18bf1a50>"
       ]
      },
      "execution_count": 51,
@@ -4072,7 +4072,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a22d017d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a19c45550>"
       ]
      },
      "execution_count": 55,
@@ -5581,7 +5581,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -5589,11 +5589,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -5605,11 +5605,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2261</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2262</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2263</td>\n",
@@ -5617,11 +5617,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2264</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2265</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5630,17 +5630,17 @@
       ],
       "text/plain": [
        "      0\n",
-       "0     0\n",
+       "0     1\n",
        "1     1\n",
-       "2     1\n",
-       "3     1\n",
+       "2     0\n",
+       "3     0\n",
        "4     1\n",
        "...  ..\n",
-       "2261  2\n",
-       "2262  1\n",
+       "2261  1\n",
+       "2262  0\n",
        "2263  0\n",
-       "2264  0\n",
-       "2265  1\n",
+       "2264  1\n",
+       "2265  2\n",
        "\n",
        "[2266 rows x 1 columns]"
       ]
@@ -5675,15 +5675,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.57      0.46      0.51       770\n",
-      "           1       0.53      1.00      0.69       868\n",
-      "           2       0.00      0.00      0.00       628\n",
+      "           0       0.55      0.39      0.46       801\n",
+      "           1       0.48      1.00      0.65       816\n",
+      "           2       0.00      0.00      0.00       649\n",
       "\n",
-      "    accuracy                           0.54      2266\n",
-      "   macro avg       0.37      0.49      0.40      2266\n",
-      "weighted avg       0.40      0.54      0.44      2266\n",
+      "    accuracy                           0.50      2266\n",
+      "   macro avg       0.34      0.46      0.37      2266\n",
+      "weighted avg       0.37      0.50      0.39      2266\n",
       "\n",
-      "0.5397175639894086\n"
+      "0.49735216240070607\n"
      ]
     },
     {
@@ -5768,9 +5768,9 @@
     {
      "data": {
       "text/plain": [
-       "1    863\n",
-       "0    825\n",
-       "2    578\n",
+       "1    878\n",
+       "0    817\n",
+       "2    571\n",
        "dtype: int64"
       ]
      },
@@ -5821,15 +5821,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.73      0.77      0.75       784\n",
-      "           1       0.97      1.00      0.98       837\n",
-      "           2       0.73      0.65      0.69       645\n",
+      "           0       0.76      0.78      0.77       799\n",
+      "           1       0.97      1.00      0.99       856\n",
+      "           2       0.72      0.67      0.70       611\n",
       "\n",
-      "    accuracy                           0.82      2266\n",
-      "   macro avg       0.81      0.81      0.81      2266\n",
-      "weighted avg       0.82      0.82      0.82      2266\n",
+      "    accuracy                           0.83      2266\n",
+      "   macro avg       0.82      0.82      0.82      2266\n",
+      "weighted avg       0.83      0.83      0.83      2266\n",
       "\n",
-      "0.822153574580759\n"
+      "0.8331862312444837\n"
      ]
     }
    ],
@@ -5852,7 +5852,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.09155209, 0.11342648, 0.16668845, 0.53753227, 0.09080071])"
+       "array([0.09098917, 0.1164939 , 0.17317201, 0.5270601 , 0.09228482])"
       ]
      },
      "execution_count": 96,
@@ -5922,15 +5922,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.37      0.29      0.32       784\n",
-      "           1       0.37      0.73      0.49       837\n",
-      "           2       0.00      0.00      0.00       645\n",
+      "           0       0.32      0.23      0.27       799\n",
+      "           1       0.37      0.74      0.49       856\n",
+      "           2       0.00      0.00      0.00       611\n",
       "\n",
-      "    accuracy                           0.37      2266\n",
-      "   macro avg       0.25      0.34      0.27      2266\n",
-      "weighted avg       0.26      0.37      0.29      2266\n",
+      "    accuracy                           0.36      2266\n",
+      "   macro avg       0.23      0.32      0.25      2266\n",
+      "weighted avg       0.25      0.36      0.28      2266\n",
       "\n",
-      "0.37113857016769636\n"
+      "0.35834068843777583\n"
      ]
     },
     {
