--- a/module-3/Supervised-Learning/your-code/final project code.ipynb
+++ b/module-3/Supervised-Learning/your-code/final project code.ipynb
@@ -5966,7 +5966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -6145,7 +6145,7 @@
        "4                       98.2  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6157,7 +6157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -6166,18 +6166,19 @@
        "(12064, 16)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# rows and columns\n",
     "lunar.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -6192,18 +6193,19 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# columns names\n",
     "lunar.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -6218,19 +6220,20 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# clean column names with underscore\n",
     "lunar.columns = lunar.columns.str.replace(' ','_')\n",
     "lunar.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -6239,7 +6242,7 @@
        "16"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6251,7 +6254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -6276,7 +6279,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6288,7 +6291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6297,7 +6300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -6314,7 +6317,7 @@
        "Name: Eclipse_Type, dtype: int64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6326,7 +6329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -6335,7 +6338,7 @@
        "8"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6347,7 +6350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6364,7 +6367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6374,7 +6377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -6386,7 +6389,7 @@
        "Name: Eclipse_Type, dtype: int64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6398,7 +6401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -6407,7 +6410,7 @@
        "3"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6419,7 +6422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6428,7 +6431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -6453,7 +6456,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6466,7 +6469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6477,7 +6480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -6637,7 +6640,7 @@
        "4                        213.5                       98.2  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6648,7 +6651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -6657,7 +6660,7 @@
        "14"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6668,7 +6671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -6835,7 +6838,7 @@
        "[12064 rows x 6 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6849,7 +6852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -6858,7 +6861,7 @@
        "6"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6869,7 +6872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -7060,7 +7063,7 @@
        "[12064 rows x 8 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7074,7 +7077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -7083,7 +7086,7 @@
        "8"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7094,7 +7097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7103,16 +7106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a27d0f590>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11a790a50>"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7139,7 +7142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -7148,7 +7151,7 @@
        "([0, 1, 2], <a list of 3 Text xticklabel objects>)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7172,7 +7175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -7186,7 +7189,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
